# ExcelToIcs

./: .flake8  .gitignore  Dockerfile  README.md  output.ics  pyproject.toml
.github/workflows/: linting.yml
input_files/: test.xlsx
src/: main.py
src/app/: main.py
src/scripts/: converter.py
src/utils/: __init__.py  utils.py
templates/: index.html
web/templates/: index.html
