[project]
name = "excel_to_ics"
authors = [{name = "Dorian Szlachcic", email = "dorianszlachcic@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "openpyxl",
    "ics",
    "more_itertools",
    "gunicorn",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "isort",
    "pytest",
]

[project.scripts]
xls2ics = "scripts.converter:main"
